--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,12 +10,28 @@
 /******************************************
 /* LAYOUT
 /*******************************************/
-img{
-  display: block;
-  margin: 0 auto;
-  height: 300px
+img[src$=".svg"] {
+  display: none;
+  height: 150px;
+  padding-bottom: 20px;
 }
 
+body {
+  height: 1000px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+button {
+  height: 100px;
+  width: 200px;
+  font-size: 48px;
+  background-color: lightblue;
+  border-radius: 5px;
+  box-shadow: 2,2,2,2;
+}
 
 /******************************************
 /* ADDITIONAL STYLES
